--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=driver123456
-keyPassword=driver123456
-keyAlias=key
-storeFile=C:/Users/PC/IdeaProjects/deliveryboy/key.jks
+storePassword=fQGQ6VY5e3kzTEvV
+keyPassword=3va7NLRAsaRKXaZm
+keyAlias=script972
+storeFile=keychain/appkey.jks
