--- a/assets/cfg/configurations.json
+++ b/assets/cfg/configurations.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "https://multi-restaurants.smartersvision.com/",
-  "api_base_url": "https://multi-restaurants.smartersvision.com/api/driver/",
+  "base_url": "https://buvape.com/",
+  "api_base_url": "https://buvape.com/api/driver/",
   "google_maps_key" : "AIzaSyAT07iMlfZ9bJt1gmGj9KhJDLFY8srI6dA"
 }
