--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: deliveryboy
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0
+version: 1.0.1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -32,7 +32,7 @@ dependencies:
   http: ^0.12.0+2
   intl: ^0.16.0
   html: ^0.14.0+2
-  shared_preferences: ^0.5.6
+  shared_preferences: 0.5.6+1
   flutter_html: ^0.10.4
   location: ^2.3.5
   dynamic_theme: ^1.0.0
@@ -72,6 +72,7 @@ flutter:
     - assets/img/marker.png
     - assets/img/my_marker.png
     - assets/img/loading.gif
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
